# Scout-Compass

./: .gitignore  DEPLOY.md  IMPROVEMENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py  requirements.txt
cli/: automations.py  compass.py  skill_forge.py
meta_skill/compass/: SKILL.md
meta_skill/skill-forge/: SKILL.md
personas/: morgan_reyes.yaml
templates/: _persona_grounding.md.j2  _scout_platform.md.j2  briefing.md.j2  comms.md.j2  decisions-log.md.j2  meeting-prep.md.j2  one-on-one.md.j2  review-prep.md.j2  strategy.md.j2  triage.md.j2
tests/: test_compass.py  test_skill_forge.py
web/: .env.example  app.py
web/templates/: index.html
